--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -92,7 +92,7 @@
         .container .fifteen.columns                 { width: 700px; }
         .container .sixteen.columns                 { width: 748px; }
 
-        .container .one-third.column                { width: 236px; }
+        .container .one-third.column                { width: 420px/*236px;*/; }
         .container .two-thirds.column               { width: 492px; }
 
         /* Offsets */
