--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 header {
 	background-color:#808000;
 	border-bottom:4px solid black;
-	width:960px;
+	width:100%;
 	padding:0;
 	position:relative;
 	float: left; display: inline;
@@ -25,7 +25,8 @@ header #search input {
 	border-color:#888
 }
 header #search input[type=text] {
-	margin-top:3px	
+	margin-top:3px;
+	width:75%
 }
 nav {
 	position:relative;
@@ -55,7 +56,7 @@ nav li a, nav li a:hover, nav li a:visited {
 	box-shadow: 0 0 2px 4px #888;
 	margin: 0 20px 20px 50px;
 	padding:20px 10px 10px;
-	width:500px
+	width:50%
 }
 article h2 {
 	font: 35px/30px Arial, sans-serif;
